# pydantic-data-quality

./: .gitignore  README.md  inferred_schema.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
app/: etl.py  etl_inferschema.py  funcao.py  schema.py
docs/: index.md
examples/: example_01.py  example_02.py  example_02_pandera.py
test/: test_func_etl.py  test_funcao_ola_turma.py
